# samp-plugin-streamer

./: .gitignore  CMakeLists.txt  DEPS  README.md
src/: CMakeLists.txt  callbacks.cpp  cell.cpp  chunk-streamer.cpp  common.h  core.cpp  data.cpp  grid.cpp  identifier.cpp  identifier.h  item.cpp  item.h  main.cpp  player.cpp  sampgdk.h  streamer.cpp  streamer.rc
src/implements/: actors_impl.cpp  areas_impl.cpp  checkpoints_impl.cpp  deprecated_impl.cpp  extended_impl.cpp  main_impl.cpp  manipulation_impl.cpp  map-icons_impl.cpp  miscellaneous_impl.cpp  objects_impl.cpp  pickups_impl.cpp  race-checkpoints_impl.cpp  settings_impl.cpp  streamer_impl.cpp  text-labels_impl.cpp  updates_impl.cpp
src/include/: areas.hpp  extended.hpp  manipulation.h  map-icons.hpp  miscellaneous.hpp  objects.hpp  pickups.hpp  race-checkpoints.hpp  streamer.hpp  text-labels.hpp
src/include/streamer/: actors.hpp  areas.hpp  checkpoints.hpp  config.hpp  deprecated.hpp  extended.hpp  manipulation.hpp  miscellaneous.hpp  objects.hpp  race-checkpoints.hpp  settings.hpp  updates.hpp
src/manipulation/: array.cpp  float.cpp  int.cpp
src/natives/: actors.cpp  areas.cpp  checkpoints.cpp  deprecated.cpp  extended.cpp  manipulation.cpp  map-icons.cpp  miscellaneous.cpp  objects.cpp  pickups.cpp  race-checkpoints.cpp  settings.cpp  text-labels.cpp  updates.cpp
src/utility/: amx.cpp  geometry.cpp  misc.cpp
